# csci305-bli

./: README.md
bli-part1/: bli.cabal
bli-part1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
bli-part1/dist-newstyle/packagedb/ghc-9.2.8/: bli-0.1.0.0-inplace.conf  package.cache
bli-part1/src/Bli/: Ast.hs  Parse.hs
bli-part1/test/part1/Bli/: AstSpec.hs
bli-part2/: bli.cabal
bli-part2/app/: Main.hs
bli-part2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
bli-part2/dist-newstyle/packagedb/ghc-9.2.8/: bli-0.1.0.0-inplace.conf  package.cache
bli-part2/src/Bli/: Ast.hs
bli-part2/test/Bli/: AstSpec.hs
bli-part3/: bli.cabal
bli-part3/app/: Main.hs
bli-part3/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
bli-part3/dist-newstyle/packagedb/ghc-9.2.8/: bli-0.1.0.0-inplace.conf  package.cache
bli-part3/src/Bli/: Ast.hs  Error.hs  Interpreter.hs  Parse.hs
bli-part3/test/Bli/: AstSpec.hs  InterpreterSpec.hs
bli-part4/app/: Main.hs
bli-part4/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
bli-part4/dist-newstyle/packagedb/ghc-9.2.8/: bli-0.1.0.0-inplace.conf  package.cache
bli-part4/res/: ch9_while_test.lox  hello_world.lox
bli-part4/src/Bli/: Analysis.hs  Ast.hs  Interpreter.hs  Parse.hs  Prelude.hs
bli-part4/test/Bli/: InterpreterSpec.hs
bli-part5/: bli.cabal
bli-part5/res/: ch10_count.lox  ch10_counter.lox  ch10_partial.lox  control_flow.lox
bli-part5/src/: Bli.hs
bli-part5/src/Bli/: Analysis.hs  Ast.hs  Error.hs  Interpreter.hs  Parse.hs  Runtime.hs
bli-part5/test/Bli/: InterpreterSpec.hs
