cabal-version:      2.4
name:               bli
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           The Bobcat Lox Interpreter

-- A longer description of the package.
description:        An implementation of a Lox interpreter.

-- The license under which the package is released.
-- license:
author:             <your name>
maintainer:         <your email address>

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Bli
    Bli.Analysis
    Bli.Ast
    Bli.Error
    Bli.Interpreter
    Bli.Parse

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base                ^>=4.16.4.0
    , either              ^>=5
    , hashable            ^>=1.4
    , megaparsec          ^>=9.4.0
    , monad-loops         ^>=0.4
    , mtl                 ^>=2.3
    , parser-combinators  ^>=1.3.0
    , text                ^>=1.2 && <2.0
    , unordered-containers ^>=0.2.19.0

  hs-source-dirs:     src
  default-language:   GHC2021
  default-extensions:
    DeriveAnyClass,
    DerivingStrategies, 
    DuplicateRecordFields,
    OverloadedStrings

  ghc-options:        -Wall

executable bli
  main-is:            Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base  ^>=4.16.4.0
    , bli
    , megaparsec  ^>=9.4.0
    , text  ^>=1.2 && <2.0

  hs-source-dirs:     app
  default-language:   GHC2021
  default-extensions: OverloadedStrings
  ghc-options:        -Wall

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    test
  other-modules: 
    Bli.AstSpec,
    Bli.InterpreterSpec
  ghc-options: -Wall
  build-depends:
    , base  ^>=4.16.4.0
    , bli
    , hspec ==2.*
    , HUnit ==1.6.*
    , megaparsec  ^>=9.4.0
    , text  ^>=1.2 && <2.0
    , unordered-containers ^>=0.2.19.0
  default-language:   GHC2021
  default-extensions: OverloadedStrings
  build-tool-depends: hspec-discover:hspec-discover == 2.*